test/ui/test/lowering/unacknowledged-internal-attribute.lushui
@known
data Unit: Type of
    unit: Unit

@public @known
data Bool: Type of
    true: Bool
    false: Bool

@intrinsic
data Text: Type
